# ObscuraProto

./: .clang-format  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING.ru.md  README.md  README.ru.md  config_example.yml
.github/workflows/: ci.yml  github_release_publish.yml  lint.yml
cmake/: ObscuraProtoConfig.cmake.in
docs/: ObscurProto Handshake.drawio  api_reference.md  api_reference.ru.md  architecture_overview.md  architecture_overview.ru.md  build_and_test.md
examples/: CMakeLists.txt  basic_encryption_example.cpp  client_identity_example.cpp  opcode_callbacks_example.cpp  request_response_example.cpp  streaming_example.cpp  websocket_example.cpp
include/obscuraproto/: config.hpp  crypto.hpp  errors.hpp  handshake_messages.hpp  keys.hpp  packet.hpp  rate_limiter.hpp  secure_buffer.hpp  session.hpp  stream.hpp  version.hpp  ws_client.hpp  ws_common.hpp  ws_server.hpp
src/: config.cpp  crypto.cpp  handshake_messages.cpp  packet.cpp  rate_limiter.cpp  session.cpp  stream.cpp  version.cpp  ws_client.cpp  ws_server.cpp
tests/: CMakeLists.txt  client_auth_test.cpp  config_test.cpp  crypto_test.cpp  handshake_messages_test.cpp  integration_test.cpp  main.cpp  packet_test.cpp  rate_limiter_test.cpp  version_negotiation_test.cpp
